Actualización del tutorial con la sección de despliegue

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "proyecto-tutorial1": {
+    "act2angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/proyecto-tutorial1",
+            "outputPath": "dist/act2angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "proyecto-tutorial1:build:production"
+              "buildTarget": "act2angular:build:production"
             },
             "development": {
-              "buildTarget": "proyecto-tutorial1:build:development"
+              "buildTarget": "act2angular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -94,6 +94,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
