--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial-angularjudit",
+  "name": "act2angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:tutorial-angularjudit": "node dist/tutorial-angularjudit/server/server.mjs"
+    "serve:ssr:act2angular": "node dist/act2angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
